--- a/source/styles/blocks/hero.scss
+++ b/source/styles/blocks/hero.scss
@@ -1,10 +1,10 @@
 .hero {
-  padding-block: 27px 20px;
+  padding-block: 27px 0;
   text-align: center;
   background-image:
-    linear-gradient(to bottom, rgba($basic-green, 0.85) 60.4%, $primary-bg-color 60.4%),
+    linear-gradient(to bottom, rgba($basic-green, 0.85) 62.92%, $primary-bg-color 62.92%),
     image-set(url("../../images/background/hero-background@1x.webp") 1x, url("../../images/background/hero-background@1x.jpg") 1x, url("../../images/background/hero-background@2x.webp") 2x, url("../../images/background/hero-background@2x.jpg") 2x),
-    linear-gradient(to bottom, #4c4b50 60.4%, $primary-bg-color 60.4%);
+    linear-gradient(to bottom, #4c4b50 62.92%, $primary-bg-color 62.92%);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: 100% auto, 320px auto, 100% auto;
@@ -16,15 +16,26 @@
   }
 
   @media screen and (min-width: $desktop-width) {
-    padding-block: 142px 0;
-    margin-bottom: 82px;
-    min-height: 693px;
-    background-image:
-      linear-gradient(to left, rgba($basic-green, 0.85) 50%, $primary-bg-color 50%),
-      image-set(url("../../images/background/hero-background-desktop@1x.webp") 1x, url("../../images/background/hero-background-desktop@1x.jpg") 1x, url("../../images/background/hero-background-desktop@2x.webp") 2x, url("../../images/background/hero-background-desktop@2x.jpg") 2x),
-      linear-gradient(to left, #4e4f53 50%, $primary-bg-color 50%);
-    background-position: top right;
-    background-size: 100% auto, 50% auto, 100% auto;
+    position: relative;
+    padding-block: 0;
+    min-height: 551px;
+  }
+
+  &::before {
+    @media screen and (min-width: $desktop-width) {
+      @include before-after(100%, clamp(100%, 694px, 694px));
+      position: absolute;
+      top: -143px;
+      left: 0;
+      z-index: -1;
+      background-image:
+        linear-gradient(to left, rgba($basic-green, 0.85) 50%, $primary-bg-color 50%),
+        image-set(url("../../images/background/hero-background-desktop@1x.webp") 1x, url("../../images/background/hero-background-desktop@1x.jpg") 1x, url("../../images/background/hero-background-desktop@2x.webp") 2x, url("../../images/background/hero-background-desktop@2x.jpg") 2x),
+        linear-gradient(to left, #4e4f53 50%, $primary-bg-color 50%);
+      background-position: top right;
+      background-size: 100% auto, 50% auto, 100% auto;
+      background-repeat: no-repeat;
+    }
   }
 }
 
