--- a/source/styles/blocks/main-header.scss
+++ b/source/styles/blocks/main-header.scss
@@ -26,11 +26,22 @@
     }
 
     @media screen and (min-width: $desktop-width) {
+      padding-bottom: 25px;
+      position: relative;
+    }
+  }
+
+  &--home::before {
+    @media screen and (min-width: $desktop-width) {
+      @include before-after(100%, 100%);
+      background-image:
+        linear-gradient(to left, rgba($basic-green, 0.85) 50%, $primary-bg-color 50%),
+        linear-gradient(to left, #4e4f53 50%, $primary-bg-color 50%);
+      background-size: 100% auto;
       position: absolute;
       top: 0;
-      z-index: 2;
-      width: 1220px;
-      left: calc((100vw - 1220px) / 2);
+      left: 0;
+      z-index: -2;
     }
   }
 
